[package]
name = "vibao-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vibao-ast = { path = "../vibao-ast" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Document", "Element", "HtmlElement", "Window", "Node", "NodeList",
  "DomTokenList", "CssStyleDeclaration", "HtmlInputElement",
  "HtmlTemplateElement", "DocumentFragment", "console",
  "Event", "EventTarget", "MouseEvent", "InputEvent", "FocusEvent",
  "HtmlCollection", "MutationObserver", "MutationObserverInit",
  "MutationRecord", "HtmlButtonElement", "HtmlTextAreaElement",
  "HtmlSelectElement", "Storage", "NamedNodeMap", "Attr",
  "Request", "RequestInit", "Response", "Headers",
  "Location", "History", "IntersectionObserver", "IntersectionObserverEntry",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = "s"
